--- a/RubyOnRailsApp/app/views/articles/_form.html.erb
+++ b/RubyOnRailsApp/app/views/articles/_form.html.erb
@@ -5,6 +5,16 @@
     </div>
 
     <div class="field">
+        <%=form.label :category_elements %>
+        <%=form.text_field :category_elements %>
+    </div>
+
+    <div class="field">
+        <%=form.label :status %>
+        <%=form.number_field :status %>
+    </div>
+
+    <div class="field">
         <%=form.label :content %>
         <%=form.rich_text_area :content %>
     </div>
