--- a/RubyOnRailsApp/app/views/articles/index.html.erb
+++ b/RubyOnRailsApp/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <div class="large-container center-block">
     <h1>Mis artículos</h1>
 
-    <%= render @articles %> 
+    <%= render @article %> 
  </div>
