--- a/RubyOnRailsApp/app/views/articles/show.html.erb
+++ b/RubyOnRailsApp/app/views/articles/show.html.erb
@@ -1,9 +1,11 @@
-<h1> <%= @article.title%></h1>
+<div class="large-container center-block">
+    <h1> <%= @article.title%></h1>
 
-<div>
-    <%= @article.content %>
-</div>
-
-<div>
-    <%= link_to "Eliminar articulo", @article, method: :delete %>
+    <div>
+    <p>Escrito por: <strong><%= @article.user.email %></strong></p>
+        <%= @article.content %>
+    </div>
+    <div>
+        <%= link_to "Eliminar articulo", @article, method: :delete %>
+    </div>
 </div>
